corrected the horizontal scrollbar problem

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -253,7 +253,7 @@ Template Name: cases.lu
 		width: 100%;
 		text-align: left;
 		outline: none;
-		
+
 	}
 
 	.btn-category:hover {
@@ -267,7 +267,7 @@ Template Name: cases.lu
 		transition: linear 0.3s;
 	}
 
-	
+
 
 	/*---------------------------------------------------*/
 
@@ -353,7 +353,7 @@ Template Name: cases.lu
 		margin-left: 35px;
 	}
 
-	
+
 
 	/******Bullet of the list, except for the navbar******/
 
@@ -410,7 +410,7 @@ Template Name: cases.lu
 		.classification--small td {
 			text-align: center;
 		}
-		
+
 		.menuwithpic {
 			height: 72px;
 			padding: 4px;
@@ -445,6 +445,8 @@ Template Name: cases.lu
 		}
 
 		.well--blue {
+			padding:0;
+			margin:0;
 			background-image: none;
 			background-color: rgb(0,114,184);
 			border-color: #0066B2;
@@ -507,14 +509,14 @@ Template Name: cases.lu
 			padding-left: 0px;
 		}
 
-		
+
 
 /**************************Navbar*************************************************/
 		/* Dropdown menu background color*/
 
 		.nav-navbar > ul > .dropdown {     background-color: #e7e7e7;  }
 
-		/* Dropdown menu font color*/ 
+		/* Dropdown menu font color*/
 
 		.nav-navbar > ul > .dropdown a{   color: #555555;  }
 
@@ -522,7 +524,7 @@ Template Name: cases.lu
 
 		.navbar-right > li > a{	color: #FFFFFF;	font-size: 120%; 	}
 
-		.navbar-right > li >a:hover{color: #ffffff; border-bottom: 2px solid black; 
+		.navbar-right > li >a:hover{color: #ffffff; border-bottom: 2px solid black;
 			background-color: rgb(0,114,184); }
 
 		/*Header text font */
@@ -537,7 +539,7 @@ Template Name: cases.lu
 		.container {
 			padding: 0;
 		}
-	
+
 		/*----Border around images-------------------------------------------------------*/
 
 		.img-border{border: 2px solid rgb(0,114,184);}
@@ -643,7 +645,7 @@ Template Name: cases.lu
   	left: 149px;
   	top: 0px;
   }
-  
+
   /*--------------------------------------------------------------------------------*/
   /*	Slider HOME */
   /*--------------------------------------------------------------------------------*/
@@ -659,7 +661,7 @@ Template Name: cases.lu
   	background: #bfa57c;
   	color: #fff;
   }
-  
+
   /* HTML5 display-role reset for older browsers */
   article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, main {
   	display: block;
@@ -687,7 +689,7 @@ Template Name: cases.lu
   /*--------------------------------------------------------------------------------*/
   /*	FOOTER */
   /*--------------------------------------------------------------------------------*/
- 
+
   .footer-credits {
   	font-size: 13px;
   	color: #FFFFFF;
